fix: new default grid/item spacing

--- a/src/components/styles/DashboardContainer.module.css
+++ b/src/components/styles/DashboardContainer.module.css
@@ -1,8 +1,8 @@
 .container {
     background-color: #f4f6f8;
-    padding-inline-start: var(--spacers-dp16);
-    padding-inline-end: var(--spacers-dp16);
-    padding-block-end: var(--spacers-dp24);
+    padding-inline-start: var(--spacers-dp8);
+    padding-inline-end: var(--spacers-dp8);
+    padding-block-end: var(--spacers-dp12);
     overflow: auto;
 }
 
